--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
+.App-header {
+  padding: 15px;
+  background-color: #697268;
+  text-align: center;
+  color: snow;
+  padding-left: 25vw;
+  padding-right: 25vw;
+}
+
+.ListTabs {
+  display: flex;
+
+}
+
+.ListTabs-tab {
+  font-size: 20px;
+  padding: 20px;
+}
+
+.ToDoList {
+  font-size: 25pt;
+  padding-left: 25vw;
+  padding-right: 25vw;
+}
+
+.ToDoList-input {
+  font-size: 20pt;
+  display: grid;
+  padding: 5px;
+  width: 100%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.ToDoItems {
+  display: grid;
+  text-align: left;
+  padding: 10px;
+  grid-template-columns: auto 1fr 1fr;
+  grid-gap: 10px;
+  grid-template-rows: auto
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/* make checkbox title description (see example website css for ex */
